--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:test": "vite dev --mode test",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "element-plus": "^2.2.28",
     "nprogress": "^0.2.0",
     "vue": "^3.2.45",
@@ -23,6 +25,7 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "eslint": "^8.32.0",
     "eslint-plugin-vue": "^9.9.0",
+    "pinia": "^2.0.31",
     "sass": "^1.57.1",
     "typescript": "^4.9.4",
     "unplugin-auto-import": "^0.12.1",
